--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
             <div class="item01">
                 <div class="title">
                     <h1>Jérémy Moinet</h1>
+                    <h2>Développeur web</h2>
                     <p>Suite à une reconversion professionnelle et étant en formation, je suis à la recherche d'un stage de développeur web et web mobile</p>
                 </div>
                 <div class="formation">
                     <h2>Diplômes et formations</h2>
-                    <p>Titre professionnel de développeur web et web mobile -</p><span>ESRP Beauvoir Evry</span>
-                    <p>Diplôme d'état ambulancier -</p><span>Centre de formation hospitalier Saint Brieuc (22)</span>
-                    <p>Baccalauréat professionnel Service aux personnes -</p><span>Lycée La Ville Davy Quessoy (22)</span>
+                    <p class="bold">Titre professionnel de développeur web et web mobile - <span>ESRP Beauvoir - Evry</span></p>
+                    <p class="grey">De novembre 2021 à février 2023</p>
+                    <p class="bold">Diplôme d'état ambulancier - <span>Centre de formation hospitalier - Saint Brieuc (22)</span></p>
+                    <p class="grey">De février 2011 à juin 2011</p>
+                    <p class="bold">Baccalauréat professionnel Service aux personnes - <span>Lycée La Ville Davy - Quessoy (22)</span></p>
+                    <p class="grey">De septembre 2005 à juin 2007</p>
                 </div>
                 <div class="expPro">
                     <h2>Expérience professionnelle</h2>
